<resources>
    <string name="app_name">PersonalBooks</string>

    <string name="entrar">Entrar</string>
    <string name="personal_boooks">personal_boooks</string>
    <string name="apelido_ou_e_mail">Informe seu e-mail</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="senha">Senha</string>
    <string name="voltar">Button</string>
    <string name="enviar">Enviar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha.</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="informe_seu_login">Informe seu login</string>
    <string name="title_activity_perfil">PerfilActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="cadastro">Digite seu e-mail e senha</string>
    <string name="ok">OK</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="button">Button</string>
    <string name="cadastro2">utilizado na plataforma Evolearn</string>
    <string name="biblioteca_nativa">Biblioteca Nativa</string>
    <string name="configura_es">Configurações</string>
    <string name="minha_biblioteca">Minha biblioteca</string>
    <string name="jo_o_da_silva">João da Silva</string>
    <string name="professor">Professor</string>
</resources>
