<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.senaisp.personalbooks.view.MainActivity">
    <ImageView
        android:layout_width="150dp"
        app:srcCompat="@drawable/logo_p_books"
        android:id="@+id/imageView"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/personal_boooks"
        tools:ignore="MissingConstraints"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/esqueceu_a_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRecovery"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="viewStart"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="27dp" />

    <EditText
        android:layout_width="312dp"
        android:hint="@string/informe_seu_login"
        android:ems="10"
        android:id="@+id/edtLogin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="LabelFor"
        android:layout_marginTop="41dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_height="50dp" />

    <EditText
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtSenha"
        android:text="@string/senha"
        app:layout_constraintTop_toBottomOf="@+id/edtLogin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="LabelFor"
        android:layout_width="312dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/edtLogin"
        android:layout_alignParentStart="true"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/btnEntrar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenha"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@mipmap/ic_action_keyboard_right_arrow_button"
        android:onClick="onClick"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/btnRecovery"
        android:layout_alignParentEnd="true" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@mipmap/ic_action_keyboard_right_arrow_button"
        android:layout_alignTop="@+id/btnEntrar"
        android:layout_centerHorizontal="true"
        android:id="@+id/floatLogin"
        app:backgroundTint="?attr/colorPrimary"
        android:onClick="onClick" />
</RelativeLayout>
