<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.senaisp.personalbooks.view.MainActivity">

    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/informe_seu_login"
        android:inputType="textEmailAddress"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/personal_boooks"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/logo_p_books"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/btnEntrar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/btnRecovery"
        android:layout_alignParentEnd="true"
        android:background="@mipmap/ic_action_loginblue"
        android:onClick="onClick"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenha"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/btnRecovery"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="13dp"
        android:layout_toEndOf="@+id/imageView2"
        android:gravity="left|center_horizontal"
        android:text="@string/esqueceu_a_senha"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnRecovery"
        android:layout_alignTop="@+id/btnRecovery"
        android:contentDescription=""
        app:srcCompat="@mipmap/ic_action_padlockblue"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/edtLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:onClick="apagaText"
            android:inputType="textPassword"
            android:text="@string/senha"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtLogin"
            tools:ignore="LabelFor"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btLimpaSenha"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="X"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>
    </LinearLayout>
</RelativeLayout>
